...

            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textColor="@color/color31"
                android:fontFamily="@font/zenkakugothicnewbold"
                app:layout_constraintBottom_toTopOf="@+id/speedTextView"
                app:layout_constraintStart_toStartOf="@+id/halfCircleImageView"
                app:layout_constraintEnd_toEndOf="@+id/halfCircleImageView"
...

                        <TextView
                            android:id="@+id/textViewTotalCalories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewGoalCalories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewTotalCarbs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewGoalCarbs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewTotalFat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewGoalFat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewTotalProtein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewGoalProtein"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/water1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

                    <ImageView
                        android:id="@+id/water8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
...

            <TextView
                android:id="@+id/textWaterIntake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/textWaterPersentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
