<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="Home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/nav_recipe"
        android:title="Recipe"
        android:icon="@drawable/recipe" />
    <item
        android:id="@+id/nav_program"
        android:title="Program"
        android:icon="@drawable/program" />
    <item
        android:id="@+id/nav_profile"
        android:title="Profile"
        android:icon="@drawable/profile" />
</menu>
